--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="/assets/img/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
+  <link href="/assets/img/favicon-16x16.png" rel="shortcut icon" type="image/vnd.microsoft.icon">
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://use.fontawesome.com/4d40833c30.js"></script>
